Add terrain-preserving river search preview and script reliability fixes